Working on the navbar

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,8 +12,25 @@
             <div class="logo">
                 <a href="#"><img src="https://img.icons8.com/cute-clipart/64/000000/controller.png"/></a>
             </div>
+            <nav>
+                <button id="nav-toggle" class="hamburger-menu">
+                    <span class="strip"></span>
+                    <span class="strip"></span>
+                    <span class="strip"></span>
+                </button>
+                <ul id="nav-menu-container">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Gmaers</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Forums</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <a href="#" id="login-register-button">Login / Register</a>
         </div>
     </header>
     
+    <script src="app.js"></script>
 </body>
 </html>
