--- a/index.html
+++ b/index.html
@@ -30,6 +30,28 @@
             <a href="#" id="login-register-button">Login / Register</a>
         </div>
     </header>
+
+    <main>
+        <section id="hero-image">
+            <div class="hero-marketing-text">
+                <h1>The Best <span>Games</span> Out There</h1>
+                <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, quisquam.</h5>
+                <button>Read More</button>
+            </div>
+        </section>
+
+        <div id="latest-news">
+            <div class="flex">
+                <h5>Latest news</h5>
+                <div id="latest-news-container">
+                    <div class="latest-news-item">
+                        <span class="badge new">New</span>
+                        <span class="latest-news-text">Lorem ipsum dolor sit amet.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     
     <script src="app.js"></script>
 </body>
