Added the for boxes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </section>
 
-        <div id="latest-news">
+        <section id="latest-news">
             <div class="flex">
                 <h5>Latest news</h5>
                 <div id="latest-news-container">
@@ -50,7 +50,48 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+
+        <section id="game-type-boxes">
+            <div class="flex">
+                <div class="box new">
+                    <div class="shade"></div>
+                    <span class="badge new">New</span>
+                    <div class="contents">
+                        <h4>Lorem ipsum dolor sit amet.</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="coments">Coments</a>
+                    </div>
+                </div>
+                <div class="box new">
+                    <div class="shade"></div>
+                    <span class="badge new">New</span>
+                    <div class="contents">
+                        <h4>Lorem ipsum dolor sit amet.</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="coments">Coments</a>
+                    </div>
+                </div>
+                <div class="box new">
+                    <div class="shade"></div>
+                    <span class="badge new">New</span>
+                    <div class="contents">
+                        <h4>Lorem ipsum dolor sit amet.</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="coments">Coments</a>
+                    </div>
+                </div>
+                <div class="box new">
+                    <div class="shade"></div>
+                    <span class="badge new">New</span>
+                    <div class="contents">
+                        <h4>Lorem ipsum dolor sit amet.</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="coments">Coments</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
     <script src="app.js"></script>
