Added images and created the new games section

--- a/index.html
+++ b/index.html
@@ -63,33 +63,70 @@
                         <a href="#" class="coments">Coments</a>
                     </div>
                 </div>
-                <div class="box new">
+                <div class="box strategy">
                     <div class="shade"></div>
-                    <span class="badge new">New</span>
+                    <span class="badge strategy">New</span>
                     <div class="contents">
                         <h4>Lorem ipsum dolor sit amet.</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                         <a href="#" class="coments">Coments</a>
                     </div>
                 </div>
-                <div class="box new">
+                <div class="box rpg">
                     <div class="shade"></div>
-                    <span class="badge new">New</span>
+                    <span class="badge rpg">New</span>
                     <div class="contents">
                         <h4>Lorem ipsum dolor sit amet.</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                         <a href="#" class="coments">Coments</a>
                     </div>
                 </div>
-                <div class="box new">
+                <div class="box racing">
                     <div class="shade"></div>
-                    <span class="badge new">New</span>
+                    <span class="badge racing">New</span>
                     <div class="contents">
                         <h4>Lorem ipsum dolor sit amet.</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                         <a href="#" class="coments">Coments</a>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="recent-games">
+            <h1>Recent Games</h1>
+            <div class="flex">
+
+                <div class="box">
+                    <span class="badge new">New</span>
+                    <img src="images/Cyberpunk.jpg" alt="new">
+                    <div class="box-lower-section">
+                        <h4>Lorem, ipsum dolor.</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="comments">3 Coments</a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <span class="badge racing">Racing</span>
+                    <img src="images/far_cry.jpg" alt="new">
+                    <div class="box-lower-section">
+                        <h4>Lorem, ipsum dolor.</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="comments">3 Coments</a>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <span class="badge adventure">Adventure</span>
+                    <img src="images/village.png" alt="new">
+                    <div class="box-lower-section">
+                        <h4>Lorem, ipsum dolor.</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <a href="#" class="comments">3 Coments</a>
+                    </div>
+                </div>
+
             </div>
         </section>
     </main>
